Bug 153094 - FILESAVE: DOC: Wrong height in table after RT in MSO
Summary: FILESAVE: DOC: Wrong height in table after RT in MSO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-01-18 16:15 UTC by Xisco Faulí
Modified: 2023-01-23 08:55 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Before vs After the RT (30.92 KB, image/png)
2023-01-18 16:15 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-01-18 16:15:59 UTC
Created attachment 184759 [details]
Before vs After the RT

Steps to reproduce:
1. Open attachment 49979 [details] from bug 39862
2. Save it to DOC
3. Open the generated document in MSO Word

-> The table has increased in size and its height is much larger. See comparison

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b9411e587586750f36ba9009b5f1e29fe461d8b5
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-01-18 16:16:59 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2022-12-08 10:56:52 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2022-12-08 15:32:42 +0000
commit a2a08463e0299d514e6e555ae61c68bb0e4348d0 (patch)
tree 92a373cb31029ebbcbc694366dc06c008323b9bc
parent 1cafff12c38b2568e213a51d8061de7b4d8f15ca (diff)
Simplify management of id-to-style-to-string-id mapping

Bisected with: bibisect-linux64-7.5

Adding Cc: to Mike Kaganski
Comment 2 Mike Kaganski 2023-01-20 08:48:28 UTC
https://gerrit.libreoffice.org/c/core/+/145869
Comment 3 Commit Notification 2023-01-20 10:46:17 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc2ad435cd148a492aba3f2b18bbba0c769f463e

tdf#153094: it seems that DOC requires WW8_RESERVED_SLOTS = 15

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-01-22 07:05:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a00556ada3214d7584bebd4d6ac33bf5c25a3467

tdf#153094: Fix default character style index, and document it

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-23 08:55:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2846b0d07074ed8a29fb9ce38c60e7e585140ee7

tdf#153094: it seems that DOC requires WW8_RESERVED_SLOTS = 15

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-01-23 08:55:50 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5633a60164cc81fd33a038ee736bad75c6c2346d

tdf#153094: Fix default character style index, and document it

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.